add canvas frame player

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="page-splash" ng-controller="SplashCtrl as splash" ng-class="splash.dropDown" ng-click="splash.hide()">
-        <div class="page-splash-message">
+        <!-- <div class="page-splash-message">
             <svg xmlns="http://www.w3.org/2000/svg" width="1024px" height="100px" viewBox="0 0 1024 100">
                 <defs>
                     <filter id="filter">
@@ -74,7 +74,9 @@
                 <path stroke="#fff" id="outline" fill="none" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1 c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z"></path>
                 <path id="outline-bg" fill="none" stroke="rgba(255,255,255,.4)" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1 c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z"></path>
             </svg>
-        </div>
+        </div> -->
+        <!-- <div class="png-animation"></div> -->
+        <canvas id="demo"></canvas>
     </div>
     <!--
         
@@ -255,6 +257,7 @@
     <script src="/bower_components/angular/angular.js"></script>
     <!-- endbower -->
     <script src="/src/client/vender/impress.js"></script>
+    <script src="/src/client/vender/canvasFramePlayer.js"></script>
     <!-- endbuild -->
     <!-- build:js js/app.js -->
     <!-- inject:js -->
